<resources>
    <string name="app_name">MecaTeknik</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="email">Email</string>
    <string name="mot_de_passe">Mot de passe</string>
    <string name="se_connecter">Se connecter</string>
    <string name="pas_de_compte_inscrivez_vous">Pas de compte ? Inscrivez-vous</string>
    <string name="add_car">Add Car</string>
    <string name="title_vehicle">Vehicles</string>
    <string name="remplir_tous_champs">"Veuillez remplir tous les champs"</string>
    <string name="erreur_connexion">Erreur de connexion</string>
    <string name="utilisateur_inconnu">Utilisateur inconnu</string>
    <string name="page_inscription">Page d\'inscription</string>
    <string name="nom">Nom</string>
    <string name="inscription">inscription\n</string>
    <string name="email_invalide">Email invalide\n</string>
    <string name="mot_de_passe_invalide">Mot de passe invalide\n</string>
    <string name="nom_invalide">Nom invalide\n</string>
    <string name="inscription_reussie">Inscription réussie\n</string>
    <string name="erreur_inscription">Erreur d\'inscription\n</string>
    <string name="title_cart">Panier</string>
    <string name="bienvenue_sur_mecateknik">Bienvenue sur MecaTeknik</string>
    <string name="deconnection">Déconnection</string>
    <string name="rechercher_pi_ces_auto">Rechercher pièces auto</string>
    <string name="fermer">Fermer</string>
    <string name="reference">Référence :</string>
    <string name="nom_de_la_piece">Nom de la pièce</string>
    <string name="modeles_comp">Modèles compatibles :</string>
    <string name="prix">Prix :</string>
    <string name="stock">Stock :</string>
    <string name="email_title">Email :</string>
</resources>